[metadata]
name = serports-pkg-phildubach
version = 0.0.2
author = Phil Dubach
author_email = phildubach@gmail.com
url = git+https://github.com/phildubach/serports@main
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyudev

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    lser = serports:main

